# CompetitionAggregator

./: .gitignore  Dockerfile  README.md  main.py  package-lock.json  package.json  pyproject.toml
front/: package-lock.json  package.json
front/src/: App.vue  main.js
front/src/assets/: main.css
front/src/components/: Card.vue  CardList.vue  Drawer.vue  Header.vue
front/src/pages/: Favorites.vue  Home.vue  Notifications.vue  Olympiad.vue  Participants.vue  User.vue
front/src/utils/: constants.js
src/: config.py  project_logging.py  setup.py
src/aggregator/: setup.py
src/aggregator/DTOs/: __init__.py  comment.py  notification.py  olympiad.py  user.py
src/aggregator/api/: __init__.py  app.py  dependencies.py  middlewares.py  router.py
src/aggregator/api/endpoints/: __init__.py  auth.py  comment.py  olympiad.py  root.py  user.py
src/aggregator/database/: __init__.py  connection.py  models.py
src/aggregator/database/crud/: __init__.py  comments.py  log.py  logs.py  notification.py  notifications.py  olympiad.py  olympiads.py  user.py  users.py
src/aggregator/service_layer/: backgruond_tasks.py  parsers.py  services.py  utils.py
src/aggregator/service_layer/parsers/: ids.txt  olympiads.json  parsers.py
tests/unit/: http_test.py  orm_to_pydantic.py  test.py
